--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,26 @@ body
     padding: 0;
 }
 
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(red, green, blue, alpha);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
+}
+
+#cabecera #tagline
+
+{
+    padding: 0 0 0 1cm;
+    font-weight: normal;
+    font-size: 0.8cm;
+
+
+}
+
 #container
 {
     width: 70%;
